--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ footer .socials a:hover{color:var(--accent-2)}
   <div class="container">
     <div class="hero-content" data-aos="fade-right">
       <h1 class="hero-title">Welcome to Class 10 Fair Books</h1>
-      <p class="hero-desc">Your modern digital library for all Class 10 subjects. Explore fair book images, notes, and resources with a beautiful, interactive experience.</p>
+      <p class="hero-desc">Your modern digital Fair books for all Class 10 subjects. Explore fair book images, notes, and resources with a beautiful, interactive experience.</p>
       <a href="#subjects" class="cta-btn">Start Exploring</a>
     </div>
     <div class="hero-visual" aria-hidden="true" data-aos="fade-left">
