--- a/index.html
+++ b/index.html
@@ -505,15 +505,15 @@
             <span class="site-title">Class 10 Fair Books</span>
             <div class="nav-controls">
                 <div class="nav-links" id="main-nav">
-                    <a href="#english">English-Exercise</a>
-                    <a href="#pak-study">Pak Study</a>
-                    <a href="#physics">Physics-Rough</a>
-                    <a href="#physics-fair">Physics-Fair</a>
-                    <a href="#chemistry">Chemistry</a>
-                    <a href="#biology">Biology</a>
-                    <a href="#maths">Maths</a>
-                    <a href="#cs">Computer Science</a>
-                    <a href="#urdu">Urdu</a>
+                    <a href="english-exercise.html">English-Exercise</a>
+                    <a href="pak-study.html">Pak Study</a>
+                    <a href="physics-rough.html">Physics-Rough</a>
+                    <a href="physics-fair.html">Physics-Fair</a>
+                    <a href="chemistry.html">Chemistry</a>
+                    <a href="biology.html">Biology</a>
+                    <a href="maths.html">Maths</a>
+                    <a href="computer-science.html">Computer Science</a>
+                    <a href="urdu.html">Urdu</a>
                 </div>
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
                     <i class="fas fa-moon"></i>
