--- a/index.html
+++ b/index.html
@@ -500,20 +500,20 @@
 </head>
 <body>
     <header>
-        <a class="skip-link" href="#subjects">Skip to subjects</a>
+        <a class="skip-link" href="index.html">Skip to subjects</a>
         <nav aria-label="Main Navigation" class="container">
             <span class="site-title">Class 10 Fair Books</span>
             <div class="nav-controls">
                 <div class="nav-links" id="main-nav">
-                    <a href="english-exercise.html">English-Exercise</a>
-                    <a href="pak-study.html">Pak Study</a>
-                    <a href="physics-rough.html">Physics-Rough</a>
-                    <a href="physics-fair.html">Physics-Fair</a>
-                    <a href="chemistry.html">Chemistry</a>
-                    <a href="biology.html">Biology</a>
-                    <a href="maths.html">Maths</a>
-                    <a href="computer-science.html">Computer Science</a>
-                    <a href="urdu.html">Urdu</a>
+                <a href="english-exercise.html">English-Exercise</a>
+                <a href="pak-study.html">Pak Study</a>
+                <a href="physics-rough.html">Physics-Rough</a>
+                <a href="physics-fair.html">Physics-Fair</a>
+                <a href="chemistry.html">Chemistry</a>
+                <a href="biology.html">Biology</a>
+                <a href="maths.html">Maths</a>
+                <a href="computer-science.html">Computer Science</a>
+                <a href="urdu.html">Urdu</a>
                 </div>
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
                     <i class="fas fa-moon"></i>
@@ -566,17 +566,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         // --- Data for Subjects ---
-        const subjects = [
-            { id: 'english', title: 'English-Exercise', emoji: '📘', gradient: 'linear-gradient(135deg,#43c6ac,#f8ffae)' },
-            { id: 'pak-study', title: 'Pak Study', emoji: '🇵🇰', gradient: 'linear-gradient(135deg,#fcb69f,#ffecd2)' },
-            { id: 'physics', title: 'Physics-Rough', emoji: '⚡', gradient: 'linear-gradient(135deg,#f9d423,#ff4e50)' },
-            { id: 'physics-fair', title: 'Physics-Fair', emoji: '🔭', gradient: 'linear-gradient(135deg,#a1c4fd,#c2e9fb)' },
-            { id: 'chemistry', title: 'Chemistry', emoji: '🧪', gradient: 'linear-gradient(135deg,#fbc2eb,#a6c1ee)' },
-            { id: 'biology', title: 'Biology', emoji: '🔬', gradient: 'linear-gradient(135deg,#d4fc79,#96e6a1)' },
-            { id: 'maths', title: 'Maths', emoji: '📐', gradient: 'linear-gradient(135deg,#fdcbf1,#e6dee9)' },
-            { id: 'cs', title: 'Computer Science', emoji: '💻', gradient: 'linear-gradient(135deg,#84fab0,#8fd3f4)' },
-            { id: 'urdu', title: 'Urdu', emoji: '📗', gradient: 'linear-gradient(135deg,#f3e7e9,#e3eeff)' }
-        ];
+       const subjects = [
+    { id: 'english-exercise', title: 'English-Exercise', emoji: '📘', gradient: 'linear-gradient(135deg,#43c6ac,#f8ffae)' },
+    { id: 'pak-study',        title: 'Pak Study',         emoji: '🇵🇰', gradient: 'linear-gradient(135deg,#fcb69f,#ffecd2)' },
+    { id: 'physics-rough',    title: 'Physics-Rough',     emoji: '⚡',   gradient: 'linear-gradient(135deg,#f9d423,#ff4e50)' },
+    { id: 'physics-fair',     title: 'Physics-Fair',      emoji: '🔭',  gradient: 'linear-gradient(135deg,#a1c4fd,#c2e9fb)' },
+    { id: 'chemistry',        title: 'Chemistry',         emoji: '🧪',  gradient: 'linear-gradient(135deg,#fbc2eb,#a6c1ee)' },
+    { id: 'biology',          title: 'Biology',           emoji: '🔬',  gradient: 'linear-gradient(135deg,#d4fc79,#96e6a1)' },
+    { id: 'maths',            title: 'Maths',             emoji: '📐',  gradient: 'linear-gradient(135deg,#fdcbf1,#e6dee9)' },
+    { id: 'computer-science', title: 'Computer Science',  emoji: '💻',  gradient: 'linear-gradient(135deg,#84fab0,#8fd3f4)' },
+    { id: 'urdu',             title: 'Urdu',              emoji: '📗',  gradient: 'linear-gradient(135deg,#f3e7e9,#e3eeff)' }
+];
+
 
         // --- Dynamic Subject Card Generation ---
         function createSubjectCards() {
@@ -677,6 +678,8 @@
 document.getElementById('dailyUploadBtn').addEventListener('click', () => {
     alert("Today (15-Aug-2025) I have uploaded: Maths and Urdu. GO and Check!");
 });
+
+
 
     </script>
 </body>
