Added two subject

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         });
         // Daily Upload Message
 document.getElementById('dailyUploadBtn').addEventListener('click', () => {
-    alert("Today (15-Aug-2025) I have uploaded: Maths and Urdu. GO and Check!");
+    alert("Today (8/18/2025) I have uploaded: Maths and Urdu. GO and Check!😀");
 });
 
 
