--- a/maths.html
+++ b/maths.html
@@ -227,6 +227,15 @@
 			<a class="img-card" href="maths fair book/49.jpeg" target="_blank" rel="noopener">
 				<div class="img-caption">Page 49</div>
 			</a>
+			<a class="img-card" href="maths fair book/50.jpeg" target="_blank" rel="noopener">
+				<div class="img-caption">Page 50</div>
+			</a>
+			<a class="img-card" href="maths fair book/51.jpeg" target="_blank" rel="noopener">
+				<div class="img-caption">Page 51</div>
+			</a>
+			<a class="img-card" href="maths fair book/52.jpeg" target="_blank" rel="noopener">
+				<div class="img-caption">Page 52</div>
+			</a>
 		</section>
 
 		 <a href="index.html" class="back-btn">← Back to Home</a>
